dynamic programming for merge table